@@ -124,5 +124,13 @@ struct list_head {
 	struct list_head *next, *prev;
 };
 
+struct hlist_node {
+	struct hlist_node *next, **pprev;
+};
+
+struct hlist_head {
+	struct hlist_node *first;
+};
+
 #endif /* __ASSEMBLY__ */
 #endif /* _SANDIX_TYPES_H_ */
